--- a/src/main/resources/templates/blog-main.html
+++ b/src/main/resources/templates/blog-main.html
@@ -12,6 +12,11 @@
 
 <div class="container mt-5">
     <h1>Мб здесь будут обновления проекта</h1>
+    <div th:each="el : ${posts}" class="alert alert-info mt-2">
+        <h3 th:text="${el.title}"/>
+        <p th:text="${el.announce}"/>
+        <a th:href="'/blog/' + ${el.id}" class="btn btn-warning">Подробнее</a>
+    </div>
 </div>
 
 <div th:insert="blocks/footer :: footer">
